@@ -9,6 +9,10 @@ TODO:
 
 version 1.35:
 
+	Fixes:
+	- Try blocks will always capture fatal messages, even when not
+	  in the 'accept'-set. [Andy Beverley]
+
 version 1.34: Thu 15 Sep 09:43:40 CEST 2022
 
 	Fixes:
